sass/custom/_styles.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

@import "_typography.scss";

$pad-header-min: 65px !default;
$pad-header-narrow: 65px !default;
$pad-header-medium: 75px !default;
$pad-header-wide: 75px !default;

time {
    font-size: .9em;
}

h1 {
    font-size: 2.2em;
}

section > h1 {
    font-size: 1.5em;
}

body > header h1 {
    font-family: 'Lobster', cursive;
    font-weight: 400;
    text-shadow: 2px 2px 2px #000000;
    @media only screen and (min-width: 0px) {
        padding-left: $pad-header-min;
        padding-right: $pad-header-min;
    }
    @media only screen and (min-width: 480px) {
        padding-left: $pad-header-narrow;
        padding-right: $pad-header-narrow;
    }
    @media only screen and (min-width: 768px) {
        padding-left: $pad-header-medium;
        padding-right: $pad-header-medium;
    }
    @media only screen and (min-width: 992px) {
        padding-left: $pad-header-wide;
        padding-right: $pad-header-wide;
    }
}

body > header h2 {
    font-family: 'Lobster', cursive;
    text-shadow: 2px 2px 2px #000000;
    padding-left: 65px;
    @media only screen and (min-width: 0px) {
        padding-left: $pad-header-min;
        padding-right: $pad-header-min;
    }
    @media only screen and (min-width: 480px) {
        padding-left: $pad-header-narrow;
        padding-right: $pad-header-narrow;
    }
    @media only screen and (min-width: 768px) {
        padding-left: $pad-header-medium;
        padding-right: $pad-header-medium;
    }
    @media only screen and (min-width: 992px) {
        padding-left: $pad-header-wide;
        padding-right: $pad-header-wide;
    }
}

body > header h1:after {
      content:"";
      position:absolute;
      top:0.3em;
      bottom:0em;
      height:132px;
      width:105px;
      overflow:hidden;
      text-align:left;
      background-image:url('../images/robot-logo_105x132.png');
      background-repeat:no-repeat;

      @media only screen and (min-width: 0px) {
           left: 0.200em;
           background-size: 60% 60%;
      }
      @media only screen and (min-width: 480px) {
           left: 0.300em;
           background-size: 60% 60%;
      }
      @media only screen and (min-width: 768px) {
           left: 0.350em;
           background-size: 70% 70%;
      }
      @media only screen and (min-width: 992px) {
           left: 0.475em;
           background-size: 80% 80%;
      }
}

aside.sidebar:after {
  position:absolute;
  right:-17.0em;
  bottom:0.5em;
  height:166px;
  width:104px;
  background-image:url('../images/waving_with_cane_104x166.png');
  background-repeat:no-repeat;
}

html {
    background: #252525 url('/images/line-tile.png?1328359347') top left
}

html .gist .gist-file .gist-meta {
    background: #fef9ed url('/images/noise.png?1328359347') top left;
}

body > div {
    background: #edeff4 url('/images/noise.png?1328359347') top left;
}

body > div > div {
    background: #f8f8f8 url('/images/noise.png?1328359347') top left;
}

body > nav {
    background: url('/images/noise.png?1328359347'), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dcead6), color-stop(50%, #c5dcbb), color-stop(100%, #a5c896));
    background: url('/images/noise.png?1328359347'), -webkit-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -moz-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -o-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -ms-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), linear-gradient(#dcead6, #c5dcbb, #a5c896);
}

.no-placeholder body > nav .search {
    background: #f0f6ed url('/images/search.png?1328359347') 0.3em 0.25em no-repeat;
}

.maskImage a[rel=subscribe-rss], .maskImage a[rel=subscribe-rss]:after {
    -moz-mask-image: url('/images/rss.png?1328359347');
    -webkit-mask-image: url('/images/rss.png?1328359347');
    -o-mask-image: url('/images/rss.png?1328359347');
    -ms-mask-image: url('/images/rss.png?1328359347');
    -khtml-mask-image: url('/images/rss.png?1328359347');
    mask-image: url('/images/rss.png?1328359347');
}

.highlight .line-numbers, html .gist .gist-file .gist-syntax .gist-highlight .line-numbers {
    background: #fdf8e8 url('/images/noise.png?1328359347') top left !important;
}

pre {
    background: #fdf6e3 url('/images/noise.png?1328359347') top left;
}

.pre-code, html .gist .gist-file .gist-syntax .gist-highlight pre, .highlight code {
    background: #fdf6e3 url('/images/noise.png?1328359347') top left !important;
}

.code-title, html .gist .gist-file .gist-meta a[href*='#file'], h3.filename, figure.code figcaption {
    background: #aaa url('/images/code_bg.png?1328359347') top repeat-x;
}

@media only screen and (min-width: 768px) {

   .toggle-sidebar:after {
       background: #f8f8f8 url('/images/noise.png?1328359347') top left;
   }
}

body > footer {
    background: url('/images/noise.png?1328359347'), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dcead6), color-stop(50%, #c5dcbb), color-stop(100%, #a5c896));
    background: url('/images/noise.png?1328359347'), -webkit-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -moz-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -o-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), -ms-linear-gradient(#dcead6, #c5dcbb, #a5c896);
    background: url('/images/noise.png?1328359347'), linear-gradient(#dcead6, #c5dcbb, #a5c896);
}

@import "_wikipedia.scss";

